--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section id='home'class='home'>
     <div id='logo'class='logo'></div>
     <h1>LV Workouts</h1>
-    <p>Let the muscles grow</p>
+    <p id='textRem'>Let the muscles grow</p>
   </section>
 
   <section id='recWorkouts'class='reWo'>
@@ -41,8 +41,7 @@
     <form onsubmit='addLog(); return false;'>
       <input id='set'type='number'placeholder='Sets...'type='number'required>
       <input id='rep'placeholder='Reps...'type='number'required>
-      <input id='date'placeholder='Date...'type='date'required>
-      <button type='submit'class='sbtBtn'>Submit</button>
+           <button type='submit'class='sbtBtn'>Submit</button>
     </form>
     <div id='contLog'></div>
   </section>
